--- a/src/pages/textile.astro
+++ b/src/pages/textile.astro
@@ -1,14 +1,29 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Categories from "../components/Categories.jsx";
+import { client, getImageUrl } from "../lib/pocketbase";
 
 const seoData = {
 	title: "Коллекции декоративных тканей | Каталог тканей Нортекс",
 	description: "Широкий выбор декоративных тканей: велюр, замша, микрофибра, экокожа, рогожка, шенилл, букле. Ткани для мебели и штор от надежного поставщика с 20-летним опытом.",
 	keywords: "коллекции тканей, каталог тканей, велюр, замша, микрофибра, экокожа, рогожка, шенилл, букле, мебельные ткани, шторные ткани"
 };
+
+// SSR - загружаем категории
+const categories = await client.collection("categories").getList(1, 50);
 ---
 
 <BaseLayout {...seoData}>
-	<Categories client:only />
+	<div class="container">
+		<div class="title xs">Широкий выбор тканей</div>
+		<div class="product-list">
+			{categories.items.map((item) => (
+				<a href={`/textile/${item.path}`}>
+					<div class="-item">
+						<div class="-text">{item.name}</div>
+						<img class="-img" src={getImageUrl(item)} alt={item.name} loading="lazy" />
+					</div>
+				</a>
+			))}
+		</div>
+	</div>
 </BaseLayout>
